--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-cayman
 title: SOARingLab@Fudan
-description: Focus on Web & Service Computing
+description: |
+Focus on Web & Service Computing 
+http://homepage.fudan.edu.cn/lzhang/
