--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
 theme: jekyll-theme-cayman
 title: SOARingLab@Fudan
-description: |
-Focus on Web & Service Computing 
-http://homepage.fudan.edu.cn/lzhang/
+description: Focus on Web & Service Computing. See detail in http://homepage.fudan.edu.cn/lzhang
